--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,7 @@
         <button id="copy" class="js-textareacopybtn btn btn-success mt-2" data-id="generated"
             disabled="disabled">Copy</button>
         <button id="download" class="btn btn-danger mt-2" disabled="disabled">Download</button>
+        <button id="openInVLC" class="btn btn-warning mt-2" disabled="disabled">Open in VLC</button>
     </div>
     <script src="assets/js/main.min.js"></script>
 </body>
