--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/favicon.png">
     <title>Getlink Fshare</title>
@@ -45,7 +47,7 @@
         </div>
         <div class="form-group">
         </div>
-        <button type="button" id="create" class="btn btn-primary mt-2">Get Link</button>
+        <button type="submit" id="create" class="btn btn-primary mt-2">Get Link</button>
         <button type="button" id="search" class="btn btn-secondary mt-2" data-toggle="modal"
             data-target="#staticBackdrop">FilmSearch</button>
         <button type="button" id="google" class="btn btn-info mt-2" data-toggle="modal"
@@ -63,56 +65,56 @@
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Film</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <form id="filmSearchForm">
+            <form id="filmSearchForm">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Film</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
                         <div class="form-group">
                             <input name="filmName" id="filmName" type="text" class="form-control"
                                 placeholder="Search...">
                         </div>
-                    </form>
-                    <div id="searchData" class="table-responsive"></div>
+                        <div id="searchData" class="table-responsive"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="filmSearch">Search</button>
-            </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" id="filmSearch">Search</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
 <div class="modal fade" id="googleSearch" data-backdrop="static" data-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Search</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <form id="ggSearchForm">
+            <form id="ggSearchForm">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Search</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
                         <div class="form-group">
                             <input name="ggQuery" id="ggQuery" type="text" class="form-control" placeholder="Search...">
                         </div>
-                    </form>
-                    <div id="ggSearchData" class="table-responsive"></div>
+                        <div id="ggSearchData" class="table-responsive"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="ggSearch">Search</button>
-            </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" id="ggSearch">Search</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
