--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
         <div class="form-group">
             <label>Fshare Link <span class="text-danger">*</span></label>
             <input name="original" id="original" type="text" class="form-control"
-                placeholder="https://www.fshare.vn/file/XXXXX">
+                placeholder="https://www.fshare.vn/[file|folder]/XXXXX">
         </div>
         <div class="form-group">
             <label>File password</label>
