Add useProxy button

--- a/views/index.html
+++ b/views/index.html
@@ -55,12 +55,12 @@
         <button type="button" id="copy" class="action-btn js-textareacopybtn btn btn-success mt-2" data-id="generated"
             disabled="disabled">Copy</button>
         <button type="button" id="download" class="action-btn btn btn-danger mt-2" disabled="disabled">Download</button>
-        <button type="button" id="useProxy" class="action-btn btn btn-info mt-2" disabled="disabled" hidden>Use
+        <button type="button" id="useProxy" class="action-btn btn btn-info mt-2" disabled="disabled">Use
             Proxy</button>
         <button type="button" id="openInVLC" class="action-btn btn btn-warning mt-2" disabled="disabled">Open in
             VLC</button>
     </form>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.min.js"></script>
 </body>
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
